crates/mineral-tui/src/view/snapshots/search_leave_morph_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
assertion_line: 1538
description: Search 退场形变中途：搜索文字淡出、浏览文字淡入，播放栏持续移动
expression: t.backend()
---
"                    ▌ mineral vX.Y.Z  │                                         "
"                                                                                "
"╭results─────────────────────────────────╮╭♪ song · LoveLetterTypewriter───────╮"
"│  title       artist   len              ││               LoveLetterTypewriter │"
"│▌ LoveLetterT Mineral  3:45             ││               Mineral              │"
"│  Palisade    Mineral  4:31             ││                                    │"
"│  Gjs         Mineral  4:46             ││                                    │"
"│  Unfinished  Mineral  6:07             ││                                    │"
"│                                        ││                                    │"
"│                                        ││                  ────────────      │"
"│                                        ││  ⠋ loading                         │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"╰ 1 / 4 ─────────────────────────────────╯╰────────────────────────────────────╯"
"                    ╭ transport ───────────────────────────────────────────────╮"
"          ╭ lyrics ─│                             —                            │"
"          │         │                             ·                            │"
"          │         │ 0:00 ●───────────────────────────────────────────── -:-- │"
"          │         │                   [⏮]   [▶]   [⏭]   [→]                  │"
"          ╰─────────│                    p     ␣     n     m                   │"
"                    │ vol █████████ 100%      mode seq                   fmt — │"
"                    ╰──────────────────────────────────────────────────────────╯"
