crates/mineral-tui/src/view/snapshots/search_loading_spinner_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search 首页在飞:results 列居中旋转 spinner「⠋ searching」(区别于空态 / idle)"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ♪ songs  x                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭detail──────────────────────────────────────────╮"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│         ⠋ searching        ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰────────────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
