crates/mineral-tui/src/view/snapshots/search_morph_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
assertion_line: 1495
description: Search 形变中途：文字固定排版淡化交接，prompt 淡入，播放栏持续移动
expression: t.backend()
---
"                    ╭search─────────────────────────────────╮                   "
"                    ╰───────────────────────────────────────╯                   "
"╭results─────────────────────────────────╮╭detail──────────────────────────────╮"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"│                                        ││                                    │"
"╰────────────────────────────────────────╯╰────────────────────────────────────╯"
"                                                                                "
"                    ╭ transport ───────────────────────────────────────────────╮"
"          ╭─────────│                   LoveLetterTypewriter                   │"
"          │         │                        Mineral ·                         │"
"          │         │ 0:00 ●───────────────────────────────────────────── 3:45 │"
"          ╰─────────│                   [⏮]   [▶]   [⏭]   [→]                  │"
"                    │                    p     ␣     n     m                   │"
"                    │ vol █████████ 100%      mode seq                   fmt — │"
"                    ╰──────────────────────────────────────────────────────────╯"
