crates/mineral-tui/src/view/snapshots/search_results_albums_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search 专辑结果:专辑名 · 艺人 两列对齐"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ◉ albums  mineral                                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭◉ album · Power─────────────────────────────────╮"
"│  album       artist  tracks││               Power                            │"
"│▌ Power       Mineral -     ││               Mineral                          │"
"│  EndSerenadi Mineral -     ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                  ────────────                  │"
"│                            ││  ⠋ loading                                     │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰ 1 / 2 ─────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ─────────────────────────────────────────────────────────────fmt — ╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│●─────────────────────────────────────────────────────────────────────────────│"
"╰ 0:00 ────────────────────────────────────────────────────────────────── -:-- ╯"
