crates/mineral-tui/src/view/snapshots/search_steady_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search 稳态空态:prompt 提示无可搜索源 + results/detail 外框 + transport 全宽"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│no searchable source                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭detail──────────────────────────────────────────╮"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰────────────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                             LoveLetterTypewriter                             │"
"│                                  Mineral ·                                   │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── 3:45 │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
