crates/mineral-tui/src/view/snapshots/startup_expand_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
assertion_line: 1203
description: "启动扩大动画中途:边框由中心外扩、框外清空、框内露内容"
expression: t.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ╭──────────────────────────────────────────────────────╮            "
"            │    登录一个音乐源,例如:                ⢸│            │            " Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " ")]
"            │ mineral channel netease login          ⢸│            │            "
"            │                                        ⢸│            │            "
"            │   登录后重启 mineral 生效              ⢸│            │            " Hidden by multi-width symbols: [(17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (36, " "), (38, " ")]
"            │                                        ⢸│            │            "
"            │                                        ⢸│            │            "
"            │                                        ⢸│            │            "
"            │                                        ⢸│            │            "
"            │                                        ⢸│            │            "
"            │────────────────────────────────────────╯╰────────────│            "
"            │──────────────────────────╮╭ spectrum ────────────────│            "
"            │                          │╭ transport ───────────────│            "
"            │                          ││         LoveLetterTypewri│            "
"            │                          ││              Mineral ·   │            "
"            ╰──────────────────────────────────────────────────────╯            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
